# fit-doc-forge

./: .gitignore  CHANGELOG.md  FIT-Automate-Master-Blueprint-v1.md  FIT-Automate-Master-Blueprint-v3.md  README.md  pytest.ini
.ai/: AGENT.md  COMMANDS.md  piv.config.yaml
.ai/skills/: changelog.md  repo.md  security.md  tests.md
.ai/templates/: prp_feature.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: piv_feature_request.yml
.github/workflows/: forge-ci.yml
agent/: .env.example  airtable_sync.py  fit-docs_sync.py  fit_docs_sync.py  promote.py  pyproject.toml  rollback.py  scaffold_vault.py  sync_fit_docs.py
agent/scripts/: register-airtable-sync-task.ps1  run-airtable-sync.ps1  run-promote.ps1  unregister-airtable-sync-task.ps1
agent/tests/: test_airtable_sync.py  test_promote.py  test_rollback.py  test_scaffold_vault.py  test_sync_fit_docs.py
agent/vault_system_docs/: agent-instructions.md  vault-map.md
agent/vault_templates/: doc-request.md  kb-article-draft.md  procedure-draft.md  solution-description.md  sop-draft.md
app/: README.md  package-lock.json  package.json
app/app/: globals.css  layout.js  page.js
app/app/api/promote/: route.js
app/app/drafts/: approve-button.js  page.js
app/lib/: vault.js
app/scripts/: start-server-bg.ps1  stop-server-bg.ps1
