[project]
name = "fit-docs-forge-agent"
version = "0.1.0"
description = "Schema-aware drafting flows for FIT doc automation."
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.setuptools.packages.find]
exclude = ["vault_templates*", "vault_system_docs*", "tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--basetemp=.pytest_scratch"
cache_dir = ".pytest_scratch/.pytest_cache"
